<resources>
    <string name="app_name">AppuntiUniversitari</string>
    <string name="title_calendar"><b>Calendario</b></string>
    <string name="title_notes"><b>Note</b></string>
    <string name="title_notifications">Notifications</string>
    <string name="titolo_del_corso"><b>Titolo del corso</b></string>
    <string name="course_title"><b>Note Materia</b></string>
    <string name="chiudi_button">Chiudi</string>
    <string name="modifica_button">Salva</string>
    <string name="string_lezioni_giornaliere"><b>Lezioni giornaliere</b></string>
    <string name="corsi_semestre_attuale"><b>Corsi semestre attuale</b></string>
</resources>